[WIP] - Management project categories

--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                         <h2>Projects</h2>
                         <nav>
                             <ul>
-                                <li>All</li>
-                                <li>Web development</li>
-                                <li>Odoo development</li>
+                                <li class="active" data-nav-project="all">All</li>
+                                <li data-nav-project="web">Web development</li>
+                                <li data-nav-project="odoo">Odoo development</li>
                             </ul>
                         </nav>
                     </header>
                     <ul class="container-projects">
-                        <li class="project-box">
+                        <li data-project="odoo" class="project-box active">
                             <figure>
                                 <img src="assets/img/projects/project-1.jpeg" alt="project"/>
                                 <figcaption>
@@ -234,7 +234,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="project-box">
+                        <li data-project="web" class="project-box active">
                             <figure>
                                 <img src="assets/img/projects/project-1.jpeg" alt="project"/>
                                 <figcaption>
@@ -250,7 +250,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="project-box">
+                        <li data-project="web" class="project-box active">
                             <figure>
                                 <img src="assets/img/projects/project-1.jpeg" alt="project"/>
                                 <figcaption>
@@ -266,7 +266,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="project-box">
+                        <li data-project="odoo" class="project-box active">
                             <figure>
                                 <img src="assets/img/projects/project-1.jpeg" alt="project"/>
                                 <figcaption>
