[IMP] - Manage the displaying projects

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                     <header>
                         <h2>Projects</h2>
                         <nav>
+                            <div class="overlay"></div>
                             <ul>
                                 <li class="active" data-nav-project="all">All</li>
                                 <li data-nav-project="web">Web development</li>
@@ -220,7 +221,7 @@
                     <ul class="container-projects">
                         <li data-project="odoo" class="project-box active">
                             <figure>
-                                <img src="assets/img/projects/project-1.jpeg" alt="project"/>
+                                <img src="assets/img/projects/miniature-scanner-deliveries.png" alt="project"/>
                                 <figcaption>
                                     <h4>Odoo development</h4>
                                     <div class="project-link">
@@ -254,7 +255,7 @@
                             <figure>
                                 <img src="assets/img/projects/project-1.jpeg" alt="project"/>
                                 <figcaption>
-                                    <h4>Fullstack development</h4>
+                                    <h4>Web development</h4>
                                     <div class="project-link">
                                         <a href="https://elow61.github.com">
                                             <ion-icon name="code-slash-outline"></ion-icon>
@@ -270,7 +271,7 @@
                             <figure>
                                 <img src="assets/img/projects/project-1.jpeg" alt="project"/>
                                 <figcaption>
-                                    <h4>Fullstack development</h4>
+                                    <h4>Odoo development</h4>
                                     <div class="project-link">
                                         <a href="https://elow61.github.com">
                                             <ion-icon name="code-slash-outline"></ion-icon>
@@ -308,7 +309,7 @@
                     </button> 
                 </form>
             </section>
-            <footer>
+            <footer data-page="contact">
                 <h3>Thanks for your visit!</h3>
                 <img src="assets/img/profile-ok.png" alt="Memoji">
             </footer>
