[FIX] - Fix JS to display the footer only on contact page and fix responsive

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <hr class="separator"/>
                 <ul class="social-media-list">
                     <li>
-                        <ion-icon data-github name="logo-github" size="small"></ion-icon>
+                        <ion-icon data-github name="logo-github"></ion-icon>
                     </li>
                     <li>
-                        <ion-icon data-linkedin name="logo-linkedin" size="small"></ion-icon>
+                        <ion-icon data-linkedin name="logo-linkedin"></ion-icon>
                     </li>
                 </ul>
             </div>
@@ -237,7 +237,7 @@
                         </li>
                         <li data-project="web" class="project-box active">
                             <figure>
-                                <img src="assets/img/projects/project-1.jpeg" alt="project"/>
+                                <img src="assets/img/projects/miniature-yousign.png" alt="project"/>
                                 <figcaption>
                                     <h4>Web development</h4>
                                     <div class="project-link">
@@ -309,7 +309,7 @@
                     </button> 
                 </form>
             </section>
-            <footer data-page="contact">
+            <footer>
                 <h3>Thanks for your visit!</h3>
                 <img src="assets/img/profile-ok.png" alt="Memoji">
             </footer>
